--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -2,7 +2,7 @@
 
 :root {
 	font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, 'Fira Sans';
 	--font-mono: 'Fira Mono', monospace;
 	--pure-white: #ffffff;
 	--primary-color: #b9c6d2;
@@ -19,7 +19,7 @@
 body {
 	min-height: 100vh;
 	margin: 0;
-	background-color: var(--primary-color);
+	background-color: #a2a8d3;
 	background: linear-gradient(
 		180deg,
 		var(--primary-color) 0%,
