--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -2,7 +2,7 @@
 
 :root {
 	font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, 'Fira Sans';
+		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, 'Fira Sans', 'Archivo Black';
 	--font-mono: 'Fira Mono', monospace;
 	--pure-white: #ffffff;
 	--primary-color: #b9c6d2;
